# CompleteChat-Demo

./: .gitignore  CompleteChat_Demo.ipynb  README.md  pyproject.toml
complete_chat_src/: install_completechat.py  sample_data.json  upload_sample_data.py  vars.py
docs/: teradata_openai_flow.py
