[project]
name = "completechat-example"
version = "0.1.0"
description = "Showing the complete chat function"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "teradataml==20.0.0.1",
    "teradataml-plus==0.3.1",
    "teradatasql>=20.0.0.41",
]

[dependency-groups]
dev = [
    "diagrams>=0.24.4",
]
